# flowforward-finance

./: .gitignore  BUILD  README.md  docker-compose.yml  pants.toml  pyproject.toml  requirements.txt
scripts/: build-docker.sh
services/accounts/: BUILD  Dockerfile  Dockerfile.debug  PlaidAccountModels.py  accounts.py  alembic.ini  config.py  conftest.py  database.py  dependencies.py  docker-compose.yml  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py
services/accounts/alembic/: env.py
services/accounts/alembic/versions/: 20241208_000000_001_initial_accounts_and_transactions_tables.py
services/accounts/events/: __init__.py  auth_handlers.py
services/accounts/tests/: __init__.py  test_accounts.py  test_health.py  test_transactions.py
services/auth/: BUILD  Dockerfile  Dockerfile.debug  README.md  __init__.py  alembic.ini  auth.py  config.py  conftest.py  database.py  dependencies.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
services/auth/alembic/: env.py  script.py.mako
services/auth/events/: __init__.py  payloads.py  publisher.py  types.py
services/auth/tests/: __init__.py  test_health.py  test_login.py  test_logout.py  test_registration.py  test_token_refresh.py  test_user_info.py
services/infrastructure/: docker-compose.yml
services/infrastructure/init-scripts/: init-aws.sh
shared/: BUILD  __init__.py  logging_config.py
shared/events/: BUILD  __init__.py  base.py  handlers.py  publisher.py  sns_publisher.py  sqs_subscriber.py  subscriber.py  types.py
(+6 files in other folders)
