[project]
name = "flowforward-accounts-service"
version = "0.1.0"
description = "Accounts service for FlowForward Finance platform"
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

